k8s/backend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: http-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: asia-east1-docker.pkg.dev/cloud-practice-427001/gar-tetris-game/tetris-game-backend:latest
        ports:
        - containerPort: 8080
          name: http-server
